fix footer spacing too

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -210,10 +210,6 @@ pre {
 .wrapper {
     width: 100%;
     max-width: $wrapper;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
     margin-left: auto;
     margin-right: auto;
   
