--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -26,7 +26,7 @@ $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
 
 $spacing-unit:     30px;
-$wrapper:          calc(1000px - (#{$spacing-unit} * 2));
+$wrapper:          calc(min(1000px, 100%) - (#{$spacing-unit} * 2));
 
 $text-color:       #111;
 $background-color: #fdfdfd;
